--- a/CryptoApi/appsettings.json
+++ b/CryptoApi/appsettings.json
@@ -1,10 +1,15 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        //"DefaultConnection": "Server=localhost,1433;Database=cryptoapp;Uid=SA;Pwd=MyPass@word;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=20.23.144.239;Database=cryptoapp;Uid=SA;Pwd=MyPass@word;TrustServerCertificate=True;"
+    },
+
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
 
